# aegis_ros

./: .gitignore  .pre-commit-config.yaml  README.md
.github/: pull_request_template.md
aegis/: CHANGELOG.md  CMakeLists.txt  aegis.repos  package.xml
aegis_bringup/: CHANGELOG.md  CMakeLists.txt  README.md  launch_diagram.plantuml  package.xml
aegis_bringup/docs/: launch_diagram.plantuml
aegis_bringup/launch/: bringup.launch.py
aegis_control/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
aegis_control/config/: camera.yaml  ros2_controllers.yaml
aegis_control/config/cameras/: cameras.yaml  depthai_cameras.yaml  yolo.json
aegis_control/config/controllers/: hande_gripper.yaml  net_ft_broadcaster.yaml  ur_drivers.yaml
aegis_control/docs/: yolov5_tutorial.md
aegis_control/launch/: depthai_cameras_driver.launch.py  depthai_driver.launch.py  ft_sensor_driver.launch.py  gripper_driver.launch.py  robot_description.launch.py  start_drivers.launch.py  ur_driver.launch.py
aegis_control/launch/include/: utils.py
aegis_control/urdf/: aegis.ros2_control.xacro  aegis_control.urdf.xacro
aegis_description/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
aegis_description/config/: controllers.yaml  initial_positions.yaml
aegis_description/config/ur5e/: joint_limits.yaml  physical_parameters.yaml  visual_parameters.yaml
aegis_description/docs/: urdfs_diagram.plantuml
aegis_description/launch/: aegis_display.launch.py  aegis_preview.launch.py  robot_description.launch.py
aegis_description/meshes/: adapter_from_sensor.dae
aegis_description/rviz/: urdf.rviz
aegis_description/urdf/: adapter_from_sensor.xacro  adapter_to_sensor.xacro  aegis.control.xacro  aegis.urdf.xacro  aegis.xacro  cell.xacro  cylinders_inertial.xacro  ft_schunk_axia80.xacro  oakd_pro_camera.xacro  ur_definition.xacro
aegis_description/urdf/modules/: ft_schunk_axia80.xacro  luxonis_oakd_pro_scene.xacro  luxonis_oakd_sr_left.xacro  luxonis_oakd_sr_right.xacro  oakd_pro_camera.xacro  robotiq_hande_gripper.xacro  ur_definition.xacro
aegis_moveit_config/: .setup_assistant  CHANGELOG.md  CMakeLists.txt  README.md  package.xml
aegis_moveit_config/config/: aegis.ros2_control.xacro  aegis.srdf  capabilities.yaml  controlers_description.yaml  initial_positions.yaml  joint_limits.yaml  moveit.rviz  scene_objects.yaml  ur_calibration.yaml
aegis_moveit_config/config/move_group/: controllers.yaml  kinematics.yaml  ros2_controllers.yaml
aegis_moveit_config/launch/: aegis.launch.py  demo.launch.py  move_group.launch.py
aegis_moveit_config/urdf/: aegis.ros2_control.xacro  aegis.srdf  aegis.urdf.xacro  initial_positions.yaml
