<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aegis</name>
  <version>0.0.1</version>
  <description>Meta package which contains all packages of the Aegis UR station.</description>
  <maintainer email="ceai@agh.edu.pl">AGH Center of Excelence in Artificial Intelligence</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">http://cdsi.agh.edu.pl</url>
  <url type="repository">https://github.com/AGH-CEAI/aegis_ros</url>
  <url type="bugtracker">https://github.com/AGH-CEAI/aegis_ros/issues</url>

  <author email="macal@agh.edu.pl">Maciej Aleksandrowicz</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>aegis_bringup</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
