<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aegis_description</name>
  <version>0.1.0</version>
  <description>A package with the description of the Aegis robot station</description>
  <maintainer email="ceai@agh.edu.pl">AGH Center of Excellence in Artificial Intelligence</maintainer>
  <license>Apache-2.0</license>

  <url type="website">http://cdsi.agh.edu.pl</url>
  <url type="repository">https://github.com/AGH-CEAI/aegis_ros</url>
  <url type="bugtracker">https://github.com/AGH-CEAI/aegis_ros/issues</url>

  <author email="macal@agh.edu.pl">Maciej Aleksandrowicz</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>net_ft_description</exec_depend>
  <exec_depend>robotiq_hande_description</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>urdf_launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
